Updated NEWS file for #252437

... and also corrected malformed identing.

BUG: 252437
FIXED-IN: 2.0.0

Tested against gwenview-4.6.80, libkipi-4.6.80,
kipi-plugins-2.0.0_beta6, but using the facebook plugin from the trunk.